# Yolo-Train-KingPhoenix

./: README.md  export.py
Convert_Adla/: CMakeLists.txt  Readme.txt  Readme_EN.txt  best_int8.adla  config.h  main.c
